test/parsing/BlockMissingClosingBrace.chpl
writeln("Who are you, really?");
{
  writeln("I am just a figment of your imagination.");
